--- a/conf/config.properties
+++ b/conf/config.properties
@@ -5,3 +5,6 @@ database-port=3306
 database-db=ampache
 database-user=ampache
 database-password=ampache
+
+# Default number of items to return in "top n" queries
+default-top=50
